
2010-08-28  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* vim.py: Fix error messages scramble vim (not gvim) display.
	* gdb.py gdbmi.py: Fix exception after folding a watched variable.
	* gdb.py: Fix cannot fold watched variable with gdb 7.1.
	* setup.py pyclewn_install.py autoload/pyclewn.vim: Fix the :Pyclewn
	command does not work on Windows.
	* vim.py setup.py pyclewn_install.py: Use the standard layout for vim
	runtime files (Sergey Khorev).
	* vim.py netbeans.py buffer.py: Add a new option to the command line
	that allows the setting of the background colors for the bp enabled
	sign, the bp disabled sign and the frame sign.
	* buffer.py: Show the gdb breakpoint numbers (the last two > digits of
	them) in the source margin instead of 'bp'.

===============================================================================
2010-07-28  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdb.py: Fix handling gdb ASYNC-RECORDs in the output of the
	'complete' command in gdb 7.2.
	* setup.py pyclewn_install.py: Strip the white spaces from $VIM on
	installing, and abort the installation when the result is not an
	existing directory.
	* setup.py regrtest.py test_support.py: The 'test' package is meant
	for Python core developers only, so do not use it anymore and
	implement our own test_support module.
	* setup.py: Workaround to a RuntimeError Python 2.7 bug when importing
	regrtest.
	* pyclewn.vim: The ':Pyclewn' command wipes out both console and
	dbgvar buffers when they exist, before starting netbeans.
	* gdb.py gdbmi.py: Map the new pyclewn command 'setfmtvar' to the
	gdb/mi command '-var-set-format'.

===============================================================================
2010-02-24  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* vim.py debugger.py: Allow pyclewn to be spawned from within vim.
	* gdb.py gdbmi.py: Switch to not buffering the output to the console,